# findIdealFragments

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: core.py  iterator.py
src/find_ideal_segments/: core.py  iterator.py
src/find_ideal_segments/finder/file/: base.py  wordratio.py
src/find_ideal_segments/finder/ram/: wordratio.py
src/find_ideal_segments/io/: jsonl.py
src/find_ideal_segments/io/utils/: jsonl2csv.py
src/find_ideal_segments/tool/: gccontent.py
src/finder/: base.py  wordratio.py
src/finder/file/: base.py  wordratio.py
src/finder/ram/: base.py
src/io/: jsonl.py
src/tool/: gccontent.py
test/: test_base_jsonl.py  test_fasta_gc2.py  test_fastagc.py  test_fastagc_cli.py  test_find_next.py  test_jsonl2csv.py  test_window_finder.py  test_word_ratio_finder.py  test_word_ratio_finder_jsonl.py  validate_result.py
