[project]
name = "rotate-calculation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
    "click>=8.2.1",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
